--- a/Report/Rapport/Rapport.tex
+++ b/Report/Rapport/Rapport.tex
@@ -36,7 +36,7 @@
 	\end{center}
 	
 	\section{Introduction:}
-		This document represents a description of a job portal web application that I have been working as part of an internship assignment by Eckovation.
+		This document represents a description of a job portal web application that I have been working on as part of an internship assignment by Eckovation.
 		
 		In this report, I will also include a user manual as to how to use the application as being the final product.
 		
@@ -48,15 +48,15 @@
 		
 		I began making the application using Django, Jinja2, and MySQL. Although I finished the app using these techniques, I decided to start over using NodeJS, EJS, and JSON, for I liked working with JavaScript better.
 		
-		Using NodeJS, as for most web applications made in NodeJS, the server is created first, which allows node to locally run the app on the browser. To make it more interesting, I created an html page and EJS template that gets an array of objects through express and creates content according to the results of the query.
+		Using NodeJS, as for most web applications made in NodeJS, the server is created first, which allows node to locally run the app on the browser. To make it more interesting, I created an HTML page and EJS template that gets an array of objects through express and creates content according to the results of the query.
 		
-		Deploying the app was the task that took most of the process time. I had to test several web hosting/deployment services such as AWS, Digital Ocean, PythonAnyWhere, Evennode, Heroku... It took my so much time to learn about app deployment, requirements and techniques. I have finally settled down on Heroku to get my app online through this link:
+		Deploying the app was the task that took most of the process time. I had to test several web hosting/deployment services such as AWS, Digital Ocean, PythonAnyWhere, Evennode, Heroku... It took me so much time to learn about app deployment, requirements, and techniques. I have finally settled on Heroku to get my app online through this link:
 		\vspace{0.25cm}
 		
 		https://jobs-chihab-sqlite3.herokuapp.com/
 		
 	\section{How to navigate:}
-		Once the user enters the link provided above, they are presented with a webpage containing a search bar. The button on the right of it submits the query to only show jobs whose tags match the searched tag, whereas the button to its left shows the entire database.
+		Once the user enters the link provided above, they are presented with a web page containing a search bar. The button to the right of it submits the query to only show jobs whose tags match the searched tag, whereas the button to its left shows the entire database.
 		
-		Below, there is a list of job offers, a click on any of the titles show a collapsing surface with information such as the description and the date the offer was published on. a click on "contact info" will show a collapsing surface with contact information about the job offering company such as the phone number, email, and the address that the user can use to make their application.
+		Below, there is a list of job offers, a click on any of the titles show a collapsing surface with information such as the description and the date the offer was published on. A click on "Contact info" will show a collapsing surface with contact information about the job-offering company such as the phone number, email, and the address that the user can use to make their application.
 \end{document}
